# moon_base_scripts

./: .gitignore  README.md  barcodes.py  create_markov_model.py  grab_random_wikipedia.py  promptonomicon.py  promptonomicon_fiction.py  promptonomicon_poetry.py  pyproject.toml  text_from_markov.py  triggering_town_test.py
